--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "vel-infotech-app",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "expo-router/entry",
+  "private": true,
   "scripts": {
     "start": "expo start",
-    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "reset-project": "node ./scripts/reset-project.js",
+
+    "lint": "eslint .",
+    "typecheck": "tsc --noEmit",
+    "doctor": "expo-doctor"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -47,6 +51,5 @@
     "eslint-config-expo": "~10.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
-  },
-  "private": true
+  }
 }
